@@ -230,11 +230,7 @@ namespace Castle.Core.Internal
 		private static TBase Instantiate<TBase>(Type subtypeofTBase, object[] ctorArgs)
 		{
 			ctorArgs = ctorArgs ?? new object[0];
-#if SILVERLIGHT
-			var types = ctorArgs.Select(a => a == null ? typeof(object) : a.GetType()).ToArray();
-#else
-			var types = Array.ConvertAll(ctorArgs, a => a == null ? typeof(object) : a.GetType());
-#endif
+			var types = ctorArgs.ConvertAll(a => a == null ? typeof(object) : a.GetType());
 			var constructor = subtypeofTBase.GetConstructor(BindingFlags.Instance | BindingFlags.Public, null, types, null);
 			if (constructor != null)
 			{
